# acs_cli_mi

./: .gitignore  CLAUDE.md  README.md  convert_reports.py  pyproject.toml
src/acs_cli/: __init__.py  cli.py  topics.py
src/acs_cli/bls_api/: __init__.py  client.py
src/acs_cli/census_api/: __init__.py  client.py  zcta.py
src/acs_cli/cms_api/: __init__.py  client.py
src/acs_cli/hrsa_api/: __init__.py  ahrf.py  client.py
src/acs_cli/places_api/: __init__.py  client.py
tests/: conftest.py  test_access.py  test_cli.py  test_economy.py  test_places.py  test_providers.py
